2010-03-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ui_utils.c:
   Fix ui_button_new_with_image() to call gtk_button_set_image() so
   that gtk_button_[sg]et_label() work as expected.


2010-03-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Warn about some GNU extensions for regular expressions & clarify
   some points.
 * src/interface.c, src/keybindings.c, src/project.c, src/project.h,
   src/prefs.c, src/plugindata.h, src/keyfile.c, src/editor.c,
   src/editor.h, geany.glade:
   Apply patch from Eugene Arshinov to add project long line marker
   customisation (thanks).
 * src/interface.c, geany.glade:
   Edit/tidy 'Long line marker' labels.


2010-03-10  Lex Trotman  <elextr.at.gmail.dot.com>

 * src/build.c, src/project.c:
   Fix crash due to NULL in project build preferences (thanks to
   Wolfgang Ocker).


2010-03-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/utils.h, src/search.c, src/search.h,
   src/document.c, doc/geany.txt, doc/geany.html:
   Merge gnu-regex branch:
   Use POSIX system/GNU regex engine for find & replace 'Use regular
   expressions' option. This alters regex syntax a bit - see the docs
   for details; we now support '?' operator and replacement backslash
   escaping is more standard.
   Make regex search imply replacing escaped chars.
   Allow \0 backreference replacement for the whole match.
   Note: Replace All may be slower; if this is a problem please let me
   know.
 - code:
   Add argument to utils_str_replace_escape() for keeping
   uninterpreted backslash escapes e.g. '\\', '\e'.
 * scintilla/LexMarkdown.cxx:
   Backport minor formatting/style changes from Scintilla project.
 * doc/geany.txt, doc/geany.html:
   Remove warning about no visual indication for zero-column-mode
   editing.


2010-03-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * wscript: